--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             android:exported="true"/>
         <activity android:name=".activities.AddReservationActivity"
             android:exported="true"/>
+        <activity android:name=".activities.DeleteReservationActivity"
+            android:exported="true"/>
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
