Finalisation de l'interface graphique

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
             android:exported="true"/>
         <activity android:name=".activities.DeleteReservationActivity"
             android:exported="true"/>
+        <activity android:name=".activities.UpdateReservationActivity"
+            android:exported="true"/>
+        <activity android:name=".activities.ListReservationsActivity"
+            android:exported="true"/>
+        <activity android:name=".activities.ProfileActivity"
+            android:exported="true"/>
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
