--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ firebaseFirestoreKtx = "25.1.1"
 identityJvm = "202411.1"
 google-cloud-dialogflow = "4.60.0"
 materialVersion = "1.12.0"
+firebaseVertexai = "16.0.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -34,6 +35,7 @@ google-cloud-dialogflow = { module = "com.google.cloud:google-cloud-dialogflow",
 identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.ref = "identityJvm" }
 #noinspection SimilarGradleDependency
 material-v150 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
+firebase-vertexai = { group = "com.google.firebase", name = "firebase-vertexai", version.ref = "firebaseVertexai" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
